fix: compactibility issues with java 8 List of to Arrays.asList("")